# market-metering

./: .env.example  .gitignore  Dockerfile  README.md  dca-alerts.sh  pyproject.toml  run.sh
.claude/: settings.local.json
config/: config.example.yaml
src/dca_alerts/: __init__.py  config.py  main.py  models.py
src/dca_alerts/market/: __init__.py  analyzer.py  fetcher.py
src/dca_alerts/notification/: __init__.py  base.py  console_notifier.py  email_notifier.py
src/dca_alerts/persistence/: __init__.py  ath_store.py
src/dca_alerts/utils/: colors.py  logging.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_ath_store.py  test_models.py
